edited the openapi.json and the flask server
